# PyChooseALicense

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  tox.ini  update_licenses.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  cli.rst  conf.py  index.rst  license.rst  requirements.txt
doc-source/_static/: style.css
doc-source/api/: description.rst  detect.rst  pychoosealicense.rst  rules.rst
pychoosealicense/: __init__.py  __main__.py  _cli.py  description.py  detect.py
pychoosealicense/_licenses/: __init__.py  blueoak-1.0.0.txt  gfdl-1.3.txt  mulanpsl-2.0.txt  vim.txt
pychoosealicense/rules/: __init__.py
tests/: conftest.py  test_cli.py  test_description.py  test_detect.py  test_get_license.py  test_iter_licenses.py  test_license_class.py  test_rules.py
tests/example_licenses/: BSD2_1  BSD2_2  BSD2_3  WTFPL_1
tests/test_cli_/: test_cli_0bsd_lower_120_verbose_.md  test_cli_0bsd_lower_30__.md  test_cli_0bsd_lower_80_verbose_.md  test_cli_0bsd_upper_200__.md  test_cli_0bsd_upper_30_verbose_.md  test_cli_0bsd_upper_80__.md  test_cli_afl_3_0_120__.md  test_cli_afl_3_0_200_verbose_.md  test_cli_afl_3_0_30__.md  test_cli_afl_3_0_30_verbose_.md  test_cli_afl_3_0_80__.md  test_cli_afl_3_0_80_verbose_.md  test_cli_agpl_3_0_120__.md  test_cli_agpl_3_0_200_verbose_.md  test_cli_agpl_3_0_30__.md  test_cli_agpl_3_0_30_verbose_.md  test_cli_agpl_3_0_80_.md  test_cli_agpl_3_0_80_verbose_.md  test_cli_apache_2_0_120_verbose_.md  test_cli_apache_2_0_200__.md  test_cli_apache_2_0_30__.md  test_cli_apache_2_0_30_verbose_.md  test_cli_apache_2_0_80__.md  test_cli_apache_2_0_80_verbose_.md  test_cli_artistic_2_0_120__.md  test_cli_artistic_2_0_120_verbose_.md  test_cli_artistic_2_0_30__.md  test_cli_artistic_2_0_30_verbose_.md  test_cli_artistic_2_0_80__.md  test_cli_artistic_2_0_80_verbose_.md  test_cli_bsd_2_lower_30_.md  test_cli_bsd_2_lower_30_verbose_.md  test_cli_bsd_2_lower_80_.md  test_cli_bsd_2_upper_120_verbose_.md  test_cli_bsd_2_upper_200_.md  test_cli_bsd_2_upper_200__.md  test_cli_bsd_2_upper_30_.md  test_cli_bsd_2_upper_80__.md  test_cli_bsd_2_upper_80_verbose_.md  test_cli_bsd_3_lower_200_verbose_.md  (+104 more)
tests/test_description_/: test_description_0bsd_lower_.yml  test_description_afl_3_0_.yml  test_description_agpl_3_0_.yml  test_description_apache_2_0_.yml  test_description_artistic_2_0_.yml  test_description_bsd_2_lower_.yml  test_description_bsd_3_lower_.yml  test_description_bsl_1_0_.yml  test_description_cc0_1_0_.yml  test_description_cc_by_4_0_upper_.yml  test_description_cc_by_sa_4_0_lower_.yml  test_description_ecl_2_0_.yml  test_description_epl_2_0_.yml  test_description_eupl_1_1_.yml  test_description_eupl_1_2_.yml  test_description_gpl_2_0_lower_.yml  test_description_gpl_3_0_upper_.yml  test_description_lgpl_2_1_lower_.yml  test_description_lgpl_3_0_lower_.yml  test_description_mit_mixed_.yml  test_description_unlicense_.yml
tests/test_get_license_/: test_get_license_0bsd_lower_.md  test_get_license_0bsd_lower_.yml  test_get_license_0bsd_upper_.md  test_get_license_0bsd_upper_.yml  test_get_license_afl_3_0_.yml  test_get_license_agpl_3_0_.yml  test_get_license_apache_2_0_.yml  test_get_license_artistic_2_0_.yml  test_get_license_bsd_2_lower_.md  test_get_license_bsd_2_lower_.yml  (+20 more)
(+2 files in other folders)
